[package]
name = "rust-ws-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
dotenv = "0.15.0"
futures = "0.3.30"
log = "0.4.21"
operational-transform = { version = "0.6.1", features = ["serde"] }
parking_lot = "0.12.1"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.36.0", features = ["full"] }
warp = "0.3.6"
